Fixed horizontal scrolling on mobile

--- a/src/imageboard/static/imageboard/styles/material-icons.less
+++ b/src/imageboard/static/imageboard/styles/material-icons.less
@@ -18,6 +18,7 @@
   word-wrap: normal;
   white-space: nowrap;
   direction: ltr;
+  overflow: hidden;
 
   /* Support for all WebKit browsers. */
   -webkit-font-smoothing: antialiased;
